vlib/v/parser/tests/struct_field_mut_type_err.vv
struct Foo {
mut:
	foo mut string
}

fn main() {
	f := Foo{}
	println(f)
}
